--- a/course-java.html
+++ b/course-java.html
@@ -294,6 +294,9 @@
             cursor: pointer;
             transition: all 0.3s;
             margin-bottom: 20px;
+            display: block;
+            text-align: center;
+            text-decoration: none;
         }
 
         .enroll-btn:hover {
@@ -472,8 +475,6 @@
             <!-- Course Meta -->
             <div style="display: flex; gap: 30px; margin-bottom: 30px; color: #666;">
                 <span>👤 By internIIT Team</span>
-                <span>📅 29/Mar/2025</span>
-                <span>👥 32 Students</span>
             </div>
 
             <!-- Tabs -->
@@ -524,7 +525,7 @@
                 
                 <div class="curriculum-section">
                     <div class="curriculum-header" onclick="toggleSection(this)">
-                        <h3>1. Object-Oriented Programming Concepts (OOPS)</h3>
+                        <h3>Object-Oriented Programming Concepts (OOPS)</h3>
                         <span class="curriculum-toggle">+</span>
                     </div>
                     <div class="curriculum-lessons">
@@ -533,28 +534,25 @@
                                 <span class="lock-icon">🔒</span>
                                 Programming Languages & OOP Principles
                             </span>
-                            <span class="lesson-duration">60 days</span>
                         </div>
                         <div class="lesson-item">
                             <span class="lesson-title">
                                 <span class="lock-icon">🔒</span>
                                 Classes, Objects & Encapsulation
                             </span>
-                            <span class="lesson-duration">60 days</span>
                         </div>
                         <div class="lesson-item">
                             <span class="lesson-title">
                                 <span class="lock-icon">🔒</span>
                                 Inheritance & Polymorphism
                             </span>
-                            <span class="lesson-duration">60 days</span>
                         </div>
                     </div>
                 </div>
 
                 <div class="curriculum-section">
                     <div class="curriculum-header" onclick="toggleSection(this)">
-                        <h3>2. Core Java Programming</h3>
+                        <h3>Core Java Programming</h3>
                         <span class="curriculum-toggle">+</span>
                     </div>
                     <div class="curriculum-lessons">
@@ -563,28 +561,25 @@
                                 <span class="lock-icon">🔒</span>
                                 Java Basics & Execution Model
                             </span>
-                            <span class="lesson-duration">60 days</span>
                         </div>
                         <div class="lesson-item">
                             <span class="lesson-title">
                                 <span class="lock-icon">🔒</span>
                                 Bytecode & Java Installation
                             </span>
-                            <span class="lesson-duration">60 days</span>
                         </div>
                         <div class="lesson-item">
                             <span class="lesson-title">
                                 <span class="lock-icon">🔒</span>
                                 Eclipse IDE Usage
                             </span>
-                            <span class="lesson-duration">60 days</span>
                         </div>
                     </div>
                 </div>
 
                 <div class="curriculum-section">
                     <div class="curriculum-header" onclick="toggleSection(this)">
-                        <h3>3. Data Types and Variables</h3>
+                        <h3>Data Types and Variables</h3>
                         <span class="curriculum-toggle">+</span>
                     </div>
                     <div class="curriculum-lessons">
@@ -593,28 +588,25 @@
                                 <span class="lock-icon">🔒</span>
                                 Primitive & Non-Primitive Data Types
                             </span>
-                            <span class="lesson-duration">60 days</span>
                         </div>
                         <div class="lesson-item">
                             <span class="lesson-title">
                                 <span class="lock-icon">🔒</span>
                                 Variables & String Formatting
                             </span>
-                            <span class="lesson-duration">60 days</span>
                         </div>
                         <div class="lesson-item">
                             <span class="lesson-title">
                                 <span class="lock-icon">🔒</span>
                                 Arrays & Type Casting
                             </span>
-                            <span class="lesson-duration">60 days</span>
                         </div>
                     </div>
                 </div>
 
                 <div class="curriculum-section">
                     <div class="curriculum-header" onclick="toggleSection(this)">
-                        <h3>4. Operators and Expressions</h3>
+                        <h3>Operators and Expressions</h3>
                         <span class="curriculum-toggle">+</span>
                     </div>
                     <div class="curriculum-lessons">
@@ -623,21 +615,19 @@
                                 <span class="lock-icon">🔒</span>
                                 Arithmetic & Relational Operators
                             </span>
-                            <span class="lesson-duration">60 days</span>
                         </div>
                         <div class="lesson-item">
                             <span class="lesson-title">
                                 <span class="lock-icon">🔒</span>
                                 Logical Operators & Precedence
                             </span>
-                            <span class="lesson-duration">60 days</span>
                         </div>
                     </div>
                 </div>
 
                 <div class="curriculum-section">
                     <div class="curriculum-header" onclick="toggleSection(this)">
-                        <h3>5. Control Flow Statements</h3>
+                        <h3>Control Flow Statements</h3>
                         <span class="curriculum-toggle">+</span>
                     </div>
                     <div class="curriculum-lessons">
@@ -646,28 +636,25 @@
                                 <span class="lock-icon">🔒</span>
                                 Conditional Statements (if, switch)
                             </span>
-                            <span class="lesson-duration">60 days</span>
                         </div>
                         <div class="lesson-item">
                             <span class="lesson-title">
                                 <span class="lock-icon">🔒</span>
                                 Loops (while, do-while, for)
                             </span>
-                            <span class="lesson-duration">60 days</span>
                         </div>
                         <div class="lesson-item">
                             <span class="lesson-title">
                                 <span class="lock-icon">🔒</span>
                                 Break and Continue Statements
                             </span>
-                            <span class="lesson-duration">60 days</span>
                         </div>
                     </div>
                 </div>
 
                 <div class="curriculum-section">
                     <div class="curriculum-header" onclick="toggleSection(this)">
-                        <h3>6. Advanced OOP Concepts</h3>
+                        <h3>Advanced OOP Concepts</h3>
                         <span class="curriculum-toggle">+</span>
                     </div>
                     <div class="curriculum-lessons">
@@ -676,21 +663,19 @@
                                 <span class="lock-icon">🔒</span>
                                 Constructors & Destructors
                             </span>
-                            <span class="lesson-duration">60 days</span>
                         </div>
                         <div class="lesson-item">
                             <span class="lesson-title">
                                 <span class="lock-icon">🔒</span>
                                 Access Modifiers & Encapsulation
                             </span>
-                            <span class="lesson-duration">60 days</span>
                         </div>
                     </div>
                 </div>
 
                 <div class="curriculum-section">
                     <div class="curriculum-header" onclick="toggleSection(this)">
-                        <h3>7. Internship Projects</h3>
+                        <h3>Internship Projects</h3>
                         <span class="curriculum-toggle">+</span>
                     </div>
                     <div class="curriculum-lessons">
@@ -699,28 +684,24 @@
                                 <span class="lock-icon">🔒</span>
                                 Console-Based Banking Application
                             </span>
-                            <span class="lesson-duration">Project</span>
                         </div>
                         <div class="lesson-item">
                             <span class="lesson-title">
                                 <span class="lock-icon">🔒</span>
                                 Currency Converter Application
                             </span>
-                            <span class="lesson-duration">Project</span>
                         </div>
                         <div class="lesson-item">
                             <span class="lesson-title">
                                 <span class="lock-icon">🔒</span>
                                 E-commerce Web Application
                             </span>
-                            <span class="lesson-duration">Project</span>
                         </div>
                         <div class="lesson-item">
                             <span class="lesson-title">
                                 <span class="lock-icon">🔒</span>
                                 Inventory Management System
                             </span>
-                            <span class="lesson-duration">Project</span>
                         </div>
                     </div>
                 </div>
@@ -740,8 +721,7 @@
         <!-- Sidebar -->
         <aside class="course-sidebar">
             <div class="price-card">
-                <div class="price">₹11,999.00</div>
-                <button class="enroll-btn">Add To Cart</button>
+                <a href="enroll.html" class="enroll-btn">Enroll Now</a>
                 
                 <div class="course-includes">
                     <h3>Course Includes:</h3>
@@ -753,17 +733,12 @@
                     <div class="include-item">
                         <span class="include-icon">⏱️</span>
                         <span class="include-label">Duration</span>
-                        <span class="include-value">60 days</span>
+                        <span class="include-value">Flexible</span>
                     </div>
                     <div class="include-item">
                         <span class="include-icon">📚</span>
                         <span class="include-label">Lessons</span>
-                        <span class="include-value">11</span>
-                    </div>
-                    <div class="include-item">
-                        <span class="include-icon">📝</span>
-                        <span class="include-label">Quizzes</span>
-                        <span class="include-value">0</span>
+                        <span class="include-value">Comprehensive</span>
                     </div>
                     <div class="include-item">
                         <span class="include-icon">🎓</span>
@@ -813,7 +788,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2026 internIIT. All rights reserved.</p>
+            <p>&copy; internIIT. All rights reserved.</p>
         </div>
     </footer>
 
