--- a/index.html
+++ b/index.html
@@ -588,7 +588,7 @@
             <ul class="nav-menu">
                 <li><a href="#home">Home</a></li>
                 <li><a href="domain.html">Courses</a></li>
-                <li><a href="#about">About</a></li>
+                <li><a href="about.html">About</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
             <a href="enroll.html" class="cta-button">Enroll Now</a>
@@ -622,28 +622,19 @@
         </div>
         <div class="categories-grid">
             <div class="category-card">
-                <div class="category-icon">💼</div>
-                <h3 class="category-name">BizSkills Hub</h3>
-            </div>
-            <div class="category-card">
-                <div class="category-icon">☁️</div>
-                <h3 class="category-name">Cloud Technology</h3>
-            </div>
-            <div class="category-card">
-                <div class="category-icon">🔒</div>
-                <h3 class="category-name">CyberSec & HackOps</h3>
-            </div>
-            <div class="category-card">
                 <div class="category-icon">🤖</div>
-                <h3 class="category-name">AI & Automation</h3>
+                <h3 class="category-name">AI & Data Science</h3>
+                <p class="category-count">Master artificial intelligence, machine learning, and data analytics</p>
             </div>
             <div class="category-card">
-                <div class="category-icon">🎨</div>
-                <h3 class="category-name">CAD & Design</h3>
+                <div class="category-icon">⚙️</div>
+                <h3 class="category-name">Automation</h3>
+                <p class="category-count">Learn test automation, CI/CD, and workflow optimization</p>
             </div>
             <div class="category-card">
                 <div class="category-icon">💻</div>
                 <h3 class="category-name">Software Engineering</h3>
+                <p class="category-count">Build robust software with modern development practices</p>
             </div>
         </div>
     </section>
@@ -662,33 +653,9 @@
                 <div class="course-content">
                     <span class="course-category">Programming</span>
                     <h3 class="course-title">Programming in Java</h3>
-                    <p class="course-instructor">By internIIT Team</p>
+                    <p class="course-instructor">By InternIIT Team</p>
                     <div class="course-footer">
                         <a href="course-java.html" class="enroll-btn">Enroll Now</a>
-                    </div>
-                </div>
-            </div>
-            <!-- Python -->
-            <div class="course-card">
-                <div class="course-image">🐍</div>
-                <div class="course-content">
-                    <span class="course-category">Programming</span>
-                    <h3 class="course-title">Programming in Python</h3>
-                    <p class="course-instructor">By Abhishek Sharma</p>
-                    <div class="course-footer">
-                        <a href="course-python.html" class="enroll-btn">Enroll Now</a>
-                    </div>
-                </div>
-            </div>
-            <!-- Web Dev -->
-            <div class="course-card">
-                <div class="course-image">🌐</div>
-                <div class="course-content">
-                    <span class="course-category">Web Technologies</span>
-                    <h3 class="course-title">Web Development Front-End</h3>
-                    <p class="course-instructor">By Pratik Sen</p>
-                    <div class="course-footer">
-                        <a href="course-web-development.html" class="enroll-btn">Enroll Now</a>
                     </div>
                 </div>
             </div>
@@ -698,33 +665,21 @@
                 <div class="course-content">
                     <span class="course-category">Artificial Intelligence</span>
                     <h3 class="course-title">Artificial Intelligence</h3>
-                    <p class="course-instructor">By Shad Ali</p>
+                    <p class="course-instructor">By InternIIT Team</p>
                     <div class="course-footer">
                         <a href="course-ai.html" class="enroll-btn">Enroll Now</a>
                     </div>
                 </div>
             </div>
-            <!-- Data Science -->
+            <!-- Web Dev -->
             <div class="course-card">
-                <div class="course-image">📊</div>
+                <div class="course-image">🌐</div>
                 <div class="course-content">
-                    <span class="course-category">Data Analytics</span>
-                    <h3 class="course-title">Data Science</h3>
-                    <p class="course-instructor">By Himanshu Mehta</p>
+                    <span class="course-category">Web Technologies</span>
+                    <h3 class="course-title">Web Development Front-End</h3>
+                    <p class="course-instructor">By InternIIT Team</p>
                     <div class="course-footer">
-                        <a href="course-data-science.html" class="enroll-btn">Enroll Now</a>
-                    </div>
-                </div>
-            </div>
-            <!-- Data Analytics -->
-            <div class="course-card">
-                <div class="course-image">📈</div>
-                <div class="course-content">
-                    <span class="course-category">Data Analytics</span>
-                    <h3 class="course-title">Data Analytics</h3>
-                    <p class="course-instructor">By Himanshu Mehta</p>
-                    <div class="course-footer">
-                        <a href="course-data-analytics.html" class="enroll-btn">Enroll Now</a>
+                        <a href="course-web-development.html" class="enroll-btn">Enroll Now</a>
                     </div>
                 </div>
             </div>
@@ -737,7 +692,7 @@
         <p>Join thousands of students already learning with internIIT and take the first step towards your dream career</p>
         <div class="cta-buttons">
             <a href="enroll.html" class="btn-primary">Get Started Today</a>
-            <a href="#courses" class="btn-secondary">View All Courses</a>
+            <a href="domain.html" class="btn-secondary">View All Courses</a>
         </div>
     </section>
 
@@ -754,7 +709,7 @@
                     <li><a href="#home">Home</a></li>
                     <li><a href="#domains">Domains</a></li>
                     <li><a href="#courses">Courses</a></li>
-                    <li><a href="#about">About Us</a></li>
+                    <li><a href="about.html">About Us</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </div>
